# SOAPnuke

./: ChangeLog  Makefile  README.md  Readme.md
src/: BloomFilter.cpp  BloomFilter.h  CMakeCache.txt  CMakeLists.txt  ChangeLog  Common.cpp  Common.h  DGECommon.cpp  DGEProcessor.cpp  DGEProcessor.h  FilterProcessor.cpp  FilterProcessor.h  FqBuffer.cpp  FqBuffer.h  FqFile.h  Logger.cpp  Logger.h  Main.cpp  MetaProcessor.cpp  MetaProcessor.h  PeBuffer.cpp  PeBuffer.h  ReverseBloomFilter.cpp  ReverseBloomFilter.h  SOAPnuke.exe.stackdump  SOAPnuke_streaming.py  SRNACleanFA.cpp  SRNACleanFQ.cpp  SRNACommon.cpp  SRNAProcessor.cpp  SRNAProcessor.h  gc.cpp  gc.h  global_parameter.h  global_variable.cpp  global_variable.h  mGzip.cpp  mGzip.h  main.cpp  peFilterTmpOut.h  (+16 more)
src/Rscripts/: Q20Q30.R  base.R  insertsize.R  quality.R  total_coverage_depth.R
src/cmake/Modules/: FindRT.cmake  Findlog4cplus.cmake
src/linux/: CMakeLists.txt  Common.cpp  Common.h  DGECommon.h  DGEProcessor.h  FilterProcessor.cpp  FilterProcessor.h  FqBuffer.h  FqFile.cpp  Logger.cpp  Main.cpp  Makefile  MetaProcessor.cpp  PeBuffer.cpp  SRNACleanFA.cpp  SRNACleanFQ.cpp  SRNACommon.h  SRNAProcessor.h  test.txt
src/threadpool/: task_adaptors.hpp
src/windows/: CMakeLists.txt  ChangeLog  Common.cpp  Common.h  CommonInclude.h  DGECommon.h  DGEProcessor.cpp  DGEProcessor.h  FilterProcessor.cpp  FilterProcessor.h  FqBuffer.cpp  Main.cpp  MetaCommon.cpp  MetaCommon.h  MetaProcessor.cpp  MetaProcessor.h  PeBuffer.h  SOAPnuke.exe.stackdump  SRNACleanFA.cpp  SRNACleanFQ.cpp  SRNACommon.h  SRNAProcessor.cpp  SRNAProcessor.h  tags
src/windows/threadpool/: task_adaptors.hpp
